--- a/src/components/founder.astro
+++ b/src/components/founder.astro
@@ -13,7 +13,7 @@ const { founder, simple } = Astro.props;
   flex-direction: column;
   width: 500px;
   position: relative;
-  background-color: #151a17;
+  background-color: var(--color-primary-grey);
   padding-bottom: 20px;
 }
 
