--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -29,6 +29,15 @@ const timestamp = process.env.DEPLOY_PREVIEW === 'true' ?
     <link rel="stylesheet" href="/style/home.css">
 </head>
 <body>
+    <!-- <cf-drawer client:idle>
+        <nav class="nav-mobile">
+            <ul>
+                <li><a href="/diensten">Diensten</a></li>
+                <li><a href="/team">Team</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+    </cf-drawer> -->
     {timestamp ?
         <span style="color: white; position: absolute; top: 65px; left: 8px; z-index: 1;">
             Preview last updated: {timestamp}
