--- a/public/style/diensten.css
+++ b/public/style/diensten.css
@@ -4,3 +4,10 @@
   --blur-bottom-from: transparent;
   --blur-bottom-to: transparent;
 }
+
+@media (max-width: 600px) {
+  .relative-wrapper {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
