--- a/src/layouts/dienst.astro
+++ b/src/layouts/dienst.astro
@@ -5,7 +5,7 @@ const {content} = Astro.props;
 <style>
 img {
   display: block;
-  width: 100%;
+  max-width: 100%;
   aspect-ratio: 16 / 9;
   object-fit: cover;
 }
