--- a/src/layouts/blur.astro
+++ b/src/layouts/blur.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from './base.astro';
+const {heading, subtitle} = Astro.props;
 ---
 <style>
   .content-wrapper {
@@ -36,10 +37,41 @@ import BaseLayout from './base.astro';
     z-index: 1;
     padding: 0 2rem;
   }
+
+  h1 {
+    text-align: center;
+    font-size: 3rem;
+    line-height: 4rem;
+    padding: 10rem 1.5rem 5rem 1.5rem;
+  }
+
+  .subtitle {
+    font-size: 1rem;
+    line-height: 1.75rem;
+    text-align: center;
+    max-width: 60ch;
+    margin: 0 auto 5rem auto;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  @media (min-width: 601px) {
+    h1 {
+      font-size: 5rem;
+      line-height: 5rem;
+    }
+
+    .subtitle {
+      font-size: 1.5rem;
+      line-height: 2.5rem;
+    }
+  }
 </style>
 <BaseLayout>
 <div class="content-wrapper">
   <div class="relative-wrapper">
+    {heading ? <h1>{heading}</h1> : ''}
+    {subtitle ? <p class="subtitle">{subtitle}</p> : ''}
     <slot />
   </div>
 </div>
