--- a/src/pages/diensten.astro
+++ b/src/pages/diensten.astro
@@ -8,21 +8,6 @@ const diensten = mds.filter(md => path.dirname(md.file.pathname).endsWith('pages
 const [content] = mds.filter(md => path.dirname(md.file.pathname).endsWith('content/diensten'));
 ---
 <style>
-  h1 {
-    text-align: center;
-    font-size: 5rem;
-    line-height: 5rem;
-    padding: 10rem 0 5rem 0;
-  }
-
-  .subtitle {
-    font-size: 1.5rem;
-    line-height: 2.5rem;
-    text-align: center;
-    max-width: 60ch;
-    margin: 0 auto 5rem auto;
-  }
-
   .diensten {
     display: flex;
     justify-content: center;
@@ -38,9 +23,7 @@ const [content] = mds.filter(md => path.dirname(md.file.pathname).endsWith('cont
   }
 </style>
 <link rel="stylesheet" href="/style/diensten.css" />
-<BlurLayout>
-<h1>{content.heading}</h1>
-{content.subtitle ? <p class="subtitle">{content.subtitle}</p> : ''}
+<BlurLayout subtitle={content.subtitle} heading={content.heading}>
 <div class="diensten">
   {diensten.map(dienst =>
     <a class="link" href={dienst.url}>
