--- a/public/style/global.css
+++ b/public/style/global.css
@@ -5,10 +5,10 @@
 
 :root {
   font-family: Roboto Slab, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.75rem;
   --color-primary-green: #00cc99;
-  --color-secondary-green: #00795a;
+  --color-secondary-green: #009771;
   --color-primary-purple: #4e008e;
   --color-primary-black: #000000;
   --color-primary-blue: #166db9;
