--- a/src/components/founder.astro
+++ b/src/components/founder.astro
@@ -11,7 +11,7 @@ const { founder, simple } = Astro.props;
 .founder {
   display: flex;
   flex-direction: column;
-  width: min(400px, 100%);
+  width: min(350px, 100%);
   position: relative;
   background-color: var(--color-primary-grey);
   padding-bottom: 20px;
@@ -30,10 +30,11 @@ const { founder, simple } = Astro.props;
 
 .name {
   text-align: center;
-  margin-top: -2rem;
+  margin-top: -1.25rem;
   margin-bottom: 0;
-  font-size: 2rem;
+  font-size: 1.75rem;
   padding: 0 1rem;
+  line-height: 2.20rem;
 }
 
 .description {
