--- a/src/components/link-button.astro
+++ b/src/components/link-button.astro
@@ -9,6 +9,7 @@ a {
   text-decoration: none;
   background-color: var(--color-secondary-green);
   padding: 0.75rem 1.25rem;
+  font-weight: bold;
   margin-top: 2rem;
   outline: none;
   border: none;
