--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -9,7 +9,7 @@ footer {
 }
 
 .reference-links {
-  font-family: Helvetica Neue, sans-serif;
+  font-family: HelveticaNeue, sans-serif;
   display: flex;
   flex-direction: column;
   font-size: 1.25rem;
@@ -99,7 +99,7 @@ footer {
   }
 
   .socials-container-desktop p {
-    font-family: Helvetica Neue, sans-serif;
+    font-family: HelveticaNeue, sans-serif;
     font-size: 1.5rem;
     margin-bottom: 1rem;
   }
@@ -111,16 +111,16 @@ footer {
         <Socials></Socials>
     </div>
     <div class="reference-links">
-        <a href="/contact">Wordt een Code.Founder_</a>
-        <a href="/team">Bekijk je docenten</a>
-        <a href="/contact">Stel je vraag</a>
-        <a href="/contact">Samenwerken</a>
+        <a href="/preview__/contact">Wordt een Code.Founder_</a>
+        <a href="/preview__/team">Bekijk je docenten</a>
+        <a href="/preview__/contact">Stel je vraag</a>
+        <a href="/preview__/contact">Samenwerken</a>
     </div>
-    <a href="/" class="footer-logo-mobile">
+    <a href="/preview__/" class="footer-logo-mobile">
         <img alt="codefounders logo" src="/assets/images/logo/mark-green.jpg" />
     </a>
     <div class="socials-container-desktop">
-        <a class="logo" href="/"><img alt="codefounders logo" src="/assets/images/logo/logo.png"></a>
+        <a class="logo" href="/preview__/"><img alt="codefounders logo" src="/assets/images/logo/logo.png"></a>
         <Socials></Socials>
         <p>info@codefounders.nl</p>
         <p>088 - 88 8888 88</p>
