--- a/src/pages/preview__/contact.astro
+++ b/src/pages/preview__/contact.astro
@@ -1,7 +1,7 @@
 ---
-import BlurLayout from '../layouts/blur.astro'
+import BlurLayout from '../../layouts/blur.astro'
 
-const [contact] = Astro.fetchContent('../content/contact/contact.md');
+const [contact] = Astro.fetchContent('../../content/contact/contact.md');
 ---
 <style>
   .contact p {
