--- a/public/style/home.css
+++ b/public/style/home.css
@@ -167,8 +167,8 @@ h3 {
 
 .text-bg-black {
   background-color: var(--color-primary-black);
-  padding: 0.5rem 1rem;
-  line-height: 3.2rem;
+  padding: 1rem 1rem 0.5rem 1rem;
+  line-height: 3.5rem;
   -webkit-box-decoration-break: clone;
   box-decoration-break: split;
 }
@@ -255,8 +255,7 @@ h3 {
   padding: 0.5rem 1rem;
   margin-top: -3rem;
   margin-bottom: 3.5rem;
-  font-size: 2rem;
-  line-height: 2.25rem;
+  font-size: 2.5rem;
 }
 
 #methodiek h2::after {
@@ -460,7 +459,7 @@ h3 {
 }
 
 .copyright p {
-  font-family: Helvetica Neue, sans-serif;
+  font-family: HelveticaNeue, sans-serif;
   font-size: 0.75rem;
   max-width: var(--content-width);
   margin: 0 auto;
