--- a/src/components/nav-menu.astro
+++ b/src/components/nav-menu.astro
@@ -1,6 +1,6 @@
 <style>
 ul {
-  font-family: Helvetica Neue, sans-serif;
+  font-family: HelveticaNeue, sans-serif;
   display: flex;
   flex-direction: column;
   list-style: none;
@@ -27,7 +27,7 @@ a {
 }
 </style>
 <ul>
-  <li><a href="/diensten">Diensten</a></li>
-  <li><a href="/team">Team</a></li>
-  <li><a href="/contact">Contact</a></li>
+  <li><a href="/preview__/diensten">Diensten</a></li>
+  <li><a href="/preview__/team">Team</a></li>
+  <li><a href="/preview__/contact">Contact</a></li>
 </ul>
