--- a/src/pages/preview__/diensten.astro
+++ b/src/pages/preview__/diensten.astro
@@ -1,22 +1,20 @@
 ---
 import * as path from 'node:path';
-import BlurLayout from '../layouts/blur.astro';
-import Dienst from '../components/dienst.astro';
+import BlurLayout from '../../layouts/blur.astro';
+import Dienst from '../../components/dienst.astro';
 
-const mds = Astro.fetchContent('../{content,pages}/diensten/**/*.md');
-const diensten = mds.filter(md => path.dirname(md.file.pathname).endsWith('pages/diensten'));
+const mds = Astro.fetchContent('../../{content,pages/preview__}/diensten/**/*.md');
+const diensten = mds.filter(md => path.dirname(md.file.pathname).endsWith('pages/preview__/diensten'));
 const [content] = mds.filter(md => path.dirname(md.file.pathname).endsWith('content/diensten'));
 ---
 <style>
   .diensten {
     display: grid;
-    grid-template-columns: 500px 500px;
+    grid-template-columns: repeat(auto-fill, 500px);
     justify-items: center;
     justify-content: center;
     gap: 5rem;
     margin: 0 auto 10rem auto;
-
-
   }
 
   .link {
