--- a/src/components/socials.astro
+++ b/src/components/socials.astro
@@ -11,7 +11,8 @@
 }
 </style>
 <div class="socials">
-  <a href="#" rel="noopener" target="_blank"><img alt="linkedin" src="/assets/images/socials/linkedin.png" /></a>
-  <a href="#" rel="noopener" target="_blank"><img alt="twitter" src="/assets/images/socials/twitter.png" /></a>
-  <a href="#" rel="noopener" target="_blank"><img alt="facebook" src="/assets/images/socials/facebook.png" /></a>
+  <a href="https://www.linkedin.com/company/codefounders" rel="noopener" target="_blank"><img alt="linkedin" src="/assets/images/socials/linkedin.png" /></a>
+  <a href="https://twitter.com/CodeFoundersNL" rel="noopener" target="_blank"><img alt="twitter" src="/assets/images/socials/twitter.png" /></a>
+  <a href="https://www.instagram.com/codefoundersnl" rel="noopener" target="_blank"><img alt="instagram" src="/assets/images/socials/instagram.png" /></a>
+  <a href="https://www.reddit.com/user/CodeFoundersNL" rel="noopener" target="_blank"><img alt="reddit" src="/assets/images/socials/reddit.png" /></a>
 </div>
