--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,9 +23,25 @@ let title = 'Code.Founders_';
 </style>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Code.Founders. If you can code, you can do anything.">
+    <meta name="author" content="Code.Founders_">
+    <meta name="keywords" content="code, founders, educatie, traineeship, bootcamp, docenten, leraren, leerlingen, studenten, IT, programmeren, coderen">
+    <meta name="theme-color" content="#00cc99">
+    <meta name="twitter:title" content="Code.Founders_ | If you can code, you can do anything">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@CodeFoundersNL">
+    <meta name="twitter:creator" content="@divRIOTS">
+    <meta name="twitter:image" content="https://codefounders.nl/assets/meta-image.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="nl-NL">
+    <meta property="og:site" content="https://codefounders.nl/">
+    <meta property="og:site_name" content="Code.Founders_">
+    <meta property="og:title" content="Code.Founders_ | If you can code, you can do anything">
+    <meta property="og:description" content="Code.Founders. If you can code, you can do anything.">
+    <meta property="og:image" content="https://codefounders.nl/assets/meta-image.jpg">
+    <meta property="og:image:alt" content="Display picture of Code.Founders_">
     <title>{title}</title>
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
